fixed some spacing

--- a/styles.css
+++ b/styles.css
@@ -186,29 +186,7 @@ html {
 	bottom: 220px;
 	font-family: "Arial Narrow";
 }
-/*container for the skill bars*/
-.container{
-	position: relative;
-	top:300px;
-	width:40%;
-	background-color: white;
-	border-radius: 25px;
-}
 
-.skills {
-  text-align: right; /* Right-align text */
-  padding-top: 2px; /* Add top padding */
-  padding-bottom: 4px; /* Add bottom padding */
-  color: black; /* White text color */
-}
-
-/*html skill bar*/
-.html {
-	width: 90%;
-	max-height: 15px;
-	background-color: #4CAF50;
-	border-radius: 25px;
-}
 
 .resume{
 	font-family: helvetica;
@@ -218,6 +196,79 @@ html {
 	left: 150px;
 	border-style: solid;
 }
+
+/*internet scanner items*/
+.internet-scanner-project-container{
+  margin: auto;
+	position: relative;
+	bottom: 180px;
+	align-self: center;
+	border-style: solid;
+	border-color: rgba(255, 100, 0, .8);
+  height: 400px;
+	max-width: 800px;
+	min-width: 700px;
+	background-color: #333;
+	border-radius: 10px;
+}
+
+.internet-scanner-project-container h1{
+  color: White;
+  text-align: center;
+  font-family: "Arial Narrow";
+}
+
+.internet-scanner-project-container img{
+  max-height: 300px;
+  position: relative;
+  top:0px;
+  left: 5px;
+  border-radius: 8px;
+}
+
+.internet-scanner-project-container button{
+	background-color: rgba(50, 200, 240, 1);
+	font-family: "Arial Narrow";
+	font-style: italic;
+	font-size: 15px;
+	color: white;
+	border-radius:6px;
+	float: right;
+	height: 35px;
+	position: relative;
+  left: -90px;
+  top: 10px;
+	border:none;
+  cursor:pointer;
+}
+
+.internet-scanner-project-container button{
+  position: relative;
+  top: -110px;
+  left: -100px;
+  float: right;
+}
+
+.internet-scanner-project-container button:hover{
+  background-color:rgba(50, 200, 240, .5);
+}
+.internet-scanner-project-container button:active{
+  background-color:rgba(200, 200, 200, 1);
+}
+
+.internet-scanner-project-container p{
+  color: White;
+  float: right;
+  text-align: center;
+  position: relative;
+  line-height: 40px;
+  font-size: 19px;
+  right: 10px;
+  bottom: 0px;
+  font-family: "Arial Narrow";
+  font-style: italic;
+}
+
 
 /* Maine video container */
 
@@ -352,77 +403,6 @@ html {
 	font-family: "Arial Narrow";
 	font-style: italic;
 }
-
-/*internet scanner items*/
-.internet-scanner-project-container{
-  margin: auto;
-	position: relative;
-	bottom: 180px;
-	align-self: center;
-	border-style: solid;
-	border-color: rgba(255, 100, 0, .8);
-	height: 50%;
-	max-width: 800px;
-	min-width: 700px;
-	background-color: #333;
-	border-radius: 10px;
-}
-
-.internet-scanner-project-container h1{
-  color: White;
-  text-align: center;
-  font-family: "Arial Narrow";
-}
-
-.internet-scanner-project-container img{
-  max-height: 300px;
-  position: relative;
-  top:0px;
-  left: 5px;
-  border-radius: 8px;
-}
-.scan1{
-  position:relative;
-	top: -10px;
-	left: 0px;
-  border-radius: 10px;
-}
-
-.internet-scanner-project-container button{
-	background-color: rgba(50, 200, 240, 1);
-	font-family: "Arial Narrow";
-	font-style: italic;
-	font-size: 15px;
-	color: white;
-	border-radius:6px;
-	float: right;
-	height: 35px;
-	position: relative;
-  left: -90px;
-  top: 10px;
-	border:none;
-  cursor:pointer;
-}
-
-.internet-scanner-project-container button:hover{
-  background-color:rgba(50, 200, 240, .5);
-}
-.internet-scanner-project-container button:active{
-  background-color:rgba(200, 200, 200, 1);
-}
-
-.scanner-description{
-  color: White;
-  float: right;
-  text-align: center;
-  position: relative;
-  font-size: 19px;
-  right: 10px;
-  bottom: 300px;
-  font-family: "Arial Narrow";
-  font-style: italic;
-}
-
 /*Start of Resume Division */
 .inner-resume{
 	margin:auto;
